# robotframework-ocrlibrary

./: .gitignore  .pylintrc  Pipfile  README.md  setup.cfg  setup.py
.github/workflows/: build.yml  linter.yml  superlinter.yml  unittest.yml
OCRLibrary/: OCRLibraryKeywords.py  __init__.py
OCRLibrary/keywords/: __init__.py  binary_image_processing.py  binary_image_transformation.py  changing_colourspace_transformation.py  colour_image_processing.py  contentCheck.py  content_check.py  content_location.py  content_validation.py  genericImageProcessing.py  generic_image_processing.py  generic_image_transformation.py  objectLocation.py  process_image.py  read_and_save_images.py  smoothing_image_transformation.py
OCRLibrary/utils/: __init__.py  imageProcessing.py
OCRLibrary/utils/exceptions/: __init__.py  common_exceptions.py  content_location_exceptions.py  content_validation_exceptions.py  exceptions.py  (+3 more)
docs/html/: OCRLibrary.html
examples/: keyword_usage.robot
tests/: __init__.py  test_binary_image_processing_keywords.py  test_binary_image_transformation_keywords.py  test_changing_colourspace_tranformation_keywords.py  test_colour_image_processing_keywords.py  test_content_location.py  test_content_location_keywords.py  test_content_validation.py  test_content_validation_keywords.py  test_genericImageProcessingKeywords.py  test_generic_image_processing_keywords.py  test_generic_image_transformation_keywords.py  test_image_processing_keywords.py  test_mask_colour_keywords.py  test_read_and_save_images_keywords.py  test_smoothing_image_transformation_keywords.py
(+20 files in other folders)
