[metadata]
name = robotframework-ocrlibrary
version = 1.0.1
author = Ben Durston
author_email = bengdurston@gmail.com
description = A robot framework library that utilizes OpenCV image processing and pytesseract OCR.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bendurston/robotframework-ocrlibrary
project_urls =
    Bug Tracker = https://github.com/bendurston/robotframework-ocrlibrary/issues
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
